@@ -1,2 +1,3 @@
 lib/security
+usr/share/man/man7
 usr/share/pam-configs
