@@ -2,6 +2,8 @@ pam-krb5-migrate (0.0.11-3) UNRELEASED; urgency=medium
 
   * Install login.pam example file. Closes: #687960
   * Bump standards version to 3.9.6 (no changes).
+  * Also build a libpam-krb5-migrate-mit package, possible now because
+    of the introduction of libkrb5-multidev.
 
  -- Jelmer Vernooij <jelmer@debian.org>  Sat, 26 Jul 2014 18:57:57 +0200
 
